--- a/src/assets/scss/layout/_contact.scss
+++ b/src/assets/scss/layout/_contact.scss
@@ -1,10 +1,14 @@
 .c-contact-box{
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	background-color: #fff;
-	padding: 20px 0;
+	padding: 20px 30px;
+
+	@include is-max(1010px){
+		justify-content: center;
+	}
 
 	.p1{
 		background-color: #e2f3fb;
@@ -20,7 +24,7 @@
 
 	.p2{
 		.txt{
-			padding: 0 25px;
+			padding: 0 50px;
 			a{
 			font-family: century-gothic, sans-serif;
 			@include font-line(36);
