--- a/src/assets/scss/layout/_contact.scss
+++ b/src/assets/scss/layout/_contact.scss
@@ -1,4 +1,4 @@
-.c-contact-box{
+.c-contact-box {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: flex-start;
@@ -6,15 +6,26 @@
 	background-color: #fff;
 	padding: 20px 30px;
 
-	@include is-max(1010px){
+	@include is-max(1090px) {
 		justify-content: center;
 	}
 
-	.p1{
+	@include is-sp {
+		border: 1px solid #258acf;
+		flex-direction: column;
+		padding: 20px;
+	}
+
+	.p1 {
 		background-color: #e2f3fb;
-		padding: 10px 40px;
-		.txt{
-			font-family:cross-platform-yu-gothic;
+		padding: 10px 30px;
+
+		@include is-sp {
+			width: 100%;
+		}
+
+		.txt {
+			font-family: cross-platform-yu-gothic;
 			@include font-line(15);
 			font-weight: 700;
 			color: #258acf;
@@ -22,24 +33,39 @@
 		}
 	}
 
-	.p2{
-		.txt{
+	.p2 {
+		.txt {
 			padding: 0 50px;
-			a{
-			font-family: century-gothic, sans-serif;
-			@include font-line(36);
-			font-weight: 700;
-			color: #258acf;
-			display: flex;
-			align-items: center
+
+			@include is-sp {
+				padding: 0;
+			}
+
+			a {
+				font-family: century-gothic, sans-serif;
+				@include font-line(36);
+				font-weight: 700;
+				color: #258acf;
+				display: flex;
+				align-items: center;
+
+				@include is-max(385px){
+					font-size: 8vw;
+				}
+			}
+
+			img{
+				@include is-max(385px){
+					width: 14%;
+				}
 			}
 		}
 	}
 
-	.p3{
-		.txt{
+	.p3 {
+		.txt {
 			@include font-line(11);
-			font-family:cross-platform-yu-gothic;
+			font-family: cross-platform-yu-gothic;
 			font-weight: 600;
 		}
 	}
