--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -11,6 +11,7 @@
 
 		&--ttl {
 			line-height: 34px;
+			top: 40%;
 
 			p {
 				@include is-max(400px) {
@@ -57,9 +58,7 @@
 		}
 
 		.l-wrap {
-			max-width: 1110px;
-			padding-right: 0;
-			padding-left: 0;
+			max-width: 1200px;
 		}
 	}
 
@@ -81,7 +80,8 @@
 		padding: 30px 30px 90px 30px;
 
 		@include is-sp {
-			padding: 15px;
+			margin: 30px 0 0 0;
+			padding: 0;
 		}
 	}
 
