--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -452,6 +452,58 @@
 	}
 }
 
+.c-buttonCase-left {
+	border: 1px solid #81b3d4;
+	border-radius: 30px;
+	width: 290px;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	background: #fff;
+	color: #258acf;
+	letter-spacing: 0.2em;
+	transition: 0.3s ease-in-out;
+
+	&:hover {
+		img {
+			left: 15px;
+		}
+	}
+
+	// &:hover{
+	// 	// background: linear-gradient(to right, #2079bd, #1e91d2);
+	// 	color: #fff !important;
+	// 	// background-color: linear-gradient(to right, #2079bd, #1e91d2);
+	// 	background: rgb(32,121,189);
+	// }
+
+	@include is-sp {
+		width: 100%;
+		letter-spacing: 0.13em;
+		border: 2px solid #81b3d4;
+	}
+
+	.txt {
+		text-align: center;
+		font-family: cross-platform-yu-gothic, sans-serif;
+		font-weight: 700;
+		padding: 20px 0;
+		line-height: 1;
+		@include font-line(14);
+		white-space: nowrap !important;
+	}
+
+	img {
+		width: 12px;
+		height: 12px;
+		position: absolute;
+		left: 20px;
+		transition: 0.3s ease-in-out;
+	}
+}
+
 .c-pageTop {
 	text-align: center;
 	margin-top: 95px;
