new updated contact page

--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -758,6 +758,13 @@
 			padding: 15px 0 0 0;
 		}
 
+		.br-sp{
+			display: none;
+			@include is-sp{
+				display: block
+			}
+		}
+
 		p {
 			@include font-line(13);
 
